src/objects/TriggerControlSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Name hold the trigger Name which we need to control without activating or de-activating the trigger from Object UI.</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAfter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsAfter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBefore__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsBefore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDelete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInsert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Control Setting</label>
</CustomObject>